--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <img src = "professionalphoto.jpg" height = "400">
+        <img src = "./4.4 Capstone Project/professionalphoto.jpg" height = "400">
         <h1>Mohammed Rayyan Waseem</h1>
         <h4>Indianapolis, Indiana | rayyanwaseem@icloud.com | (352) 682-2811 | linkedin.com/in/rayyan-waseem</h4>
 
