--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <li><h5>Efficacy of Psychological Therapies in Patients with Chronic Constipation and History of Early Adverse Life Events or Post-Traumatic Stress Disorder</h5></li>
             <li><h5>Insulin Fermentation as a Novel Approach to Measuring Intestinal Short Chain Fatty Acid Fermentation in Adults</h5></li>
         </ol>
-        <a href="./contact.html">Contact Page</a>
+        <a href="./4.4 Capstone Project/contact.html">Contact Page</a>
         <br>
-        <a href="./hobbies.html">Hobbies Page</a>
+        <a href="./4.4 Capstone Project/hobbies.html">Hobbies Page</a>
     </body>
 </html>
